--- a/src/components/BottomNav.module.css
+++ b/src/components/BottomNav.module.css
@@ -1,9 +1,6 @@
 .nav {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   height: 64px;
+  flex-shrink: 0;
   background: #0a0a0a;
   border-top: 1px solid #1c1c1c;
   display: flex;
